# ai-work-a

./: .gitignore  NOTES.md  README.md  docker-compose.yml
legacy/: .gitignore  DOCKER.md  NOTES.md  README.md  backend-eng-tasks.md  docker-compose.yml
legacy/python-service/: .env.example  Dockerfile  pyproject.toml  test_api.sh
legacy/python-service/app/models/: briefing.py
legacy/python-service/app/repositories/interfaces/: __init__.py
legacy/python-service/tests/: conftest.py  test_briefings.py
legacy/ts-service/: .dockerignore  .env.example  .prettierignore  Dockerfile  Dockerfile.bull-board  package.json  test_api.sh  tsconfig.json
legacy/ts-service/src/: app.module.ts
python-service/: README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  test_api.sh
python-service/app/: main.py
python-service/app/api/: briefings.py
python-service/app/briefings/: __init__.py  api.py  exception_handlers.py  presenters.py  queries.py  service.py
python-service/app/core/: config.py  exceptions.py
python-service/app/db/: session.py
python-service/app/models/: __init__.py  briefing.py
python-service/migrations/: env.py
python-service/tests/: conftest.py  test_briefings.py  test_health.py  test_main.py  test_sample_items.py
ts-service/: .env.example  README.md  eslint.config.js  jest.config.ts  package-lock.json  package.json  test_endpoints.sh  tsconfig.json
ts-service/src/: app.module.ts  main.ts
ts-service/test/: candidates.e2e-spec.ts  jest-e2e.json  summaries.e2e-spec.ts
(+103 files in other folders)
